--- a/projets/tic-tac-toe/index.html
+++ b/projets/tic-tac-toe/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Jeu du Morpion</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h2>Error 404</h2>
     <h1>Jeu du Morpion</h1>
     <div class="board" id="board"></div>
     <div class="status" id="status">Joueur X commence</div>
