--- a/projets/dice/index.html
+++ b/projets/dice/index.html
@@ -18,6 +18,8 @@
     <div class="dice-options">
       <label>
         <input type="radio" name="dice" value="4" />
+        <img src="dice/triangle.png" class="dice4" alt="Unchecked" />
+        <img src="dice/triangle.png" class="dice4" alt="Checked" />
         d4
       </label>
       <label>
